{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 169,
  "lineage": "3a62178d-b866-8b6d-c839-a65571ff9145",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-012967cc5a8c9f891",
            "arn": "arn:aws:ec2:us-east-1:590183895657:instance/i-0a01c70b152e52446",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a01c70b152e52446",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lr-mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073bf5dc03bfe8d71",
            "private_dns": "ip-10-10-0-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.250",
            "public_ip": "44.211.116.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Cloud": "AWS",
                  "IAC": "Terraform",
                  "IAC_Version": "1.9.8",
                  "env": "dev",
                  "owner": "Rios"
                },
                "tags_all": {
                  "Cloud": "AWS",
                  "IAC": "Terraform",
                  "IAC_Version": "1.9.8",
                  "env": "dev",
                  "owner": "Rios"
                },
                "throughput": 125,
                "volume_id": "vol-058162e4622c12615",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f4561d9ba930d5b",
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "env": "dev",
              "owner": "Rios"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ddb2193fd953ede"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:internet-gateway/igw-02c1c0d745c3b4674",
            "id": "igw-02c1c0d745c3b4674",
            "owner_id": "590183895657",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "igw vpc virginia",
              "env": "dev",
              "owner": "Rios"
            },
            "vpc_id": "vpc-06048ca415dfa6329"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "puclic_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:route-table/rtb-082349e6e7a1ddf05",
            "id": "rtb-082349e6e7a1ddf05",
            "owner_id": "590183895657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c1c0d745c3b4674",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "public crt",
              "env": "dev",
              "owner": "Rios"
            },
            "timeouts": null,
            "vpc_id": "vpc-06048ca415dfa6329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f35fecd173903541",
            "route_table_id": "rtb-082349e6e7a1ddf05",
            "subnet_id": "subnet-01f4561d9ba930d5b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.puclic_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:security-group/sg-03ddb2193fd953ede",
            "description": "allow ssh inbound traffic and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ddb2193fd953ede",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "590183895657",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public instance SG"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "public instance SG",
              "env": "dev",
              "owner": "Rios"
            },
            "timeouts": null,
            "vpc_id": "vpc-06048ca415dfa6329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:subnet/subnet-01838bc313b7ee3e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01838bc313b7ee3e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183895657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "private_subnet",
              "env": "dev",
              "owner": "Rios"
            },
            "vpc_id": "vpc-06048ca415dfa6329"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:subnet/subnet-01f4561d9ba930d5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f4561d9ba930d5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590183895657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "public_subnet",
              "env": "dev",
              "owner": "Rios"
            },
            "vpc_id": "vpc-06048ca415dfa6329"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:vpc/vpc-06048ca415dfa6329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-047d80413a93ebbdf",
            "default_route_table_id": "rtb-0bb473b05f8513ce6",
            "default_security_group_id": "sg-07d0ffc481cd68c54",
            "dhcp_options_id": "dopt-0e95555c8722807ba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06048ca415dfa6329",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb473b05f8513ce6",
            "owner_id": "590183895657",
            "tags": {
              "Name": "vpc_virginia"
            },
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "Name": "vpc_virginia",
              "env": "dev",
              "owner": "Rios"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_egress_rule_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:security-group-rule/sgr-0abf828c17d800432",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0abf828c17d800432",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ddb2193fd953ede",
            "security_group_rule_id": "sgr-0abf828c17d800432",
            "tags": null,
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "env": "dev",
              "owner": "Rios"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_egress_rule_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:security-group-rule/sgr-0d61879ff758da2de",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-0d61879ff758da2de",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ddb2193fd953ede",
            "security_group_rule_id": "sgr-0d61879ff758da2de",
            "tags": null,
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "env": "dev",
              "owner": "Rios"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ingress_rule_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895657:security-group-rule/sgr-0498868fe958c57e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0498868fe958c57e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ddb2193fd953ede",
            "security_group_rule_id": "sgr-0498868fe958c57e1",
            "tags": null,
            "tags_all": {
              "Cloud": "AWS",
              "IAC": "Terraform",
              "IAC_Version": "1.9.8",
              "env": "dev",
              "owner": "Rios"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    }
  ]
}